--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 # mUJ657ySZpAFgkTm
 
-MONGODB_URL="mongodb+srv://saribaby1999:<password>@cluster0.1bsvjjo.mongodb.net/"
+MONGODB_URL="mongodb+srv://saribaby1999:mUJ657ySZpAFgkTm@cluster0.1bsvjjo.mongodb.net/"
